--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,12 @@
             <artifactId>spring-boot-starter-web</artifactId>
             <version>2.0.2.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.4</version>
+        </dependency>
+
 
     </dependencies>
 
